# graphiti-mcp-server

./: .gitattributes  .gitignore  Dockerfile  README.md  dev_server.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  graphiti_mcp_server.py  pyproject.toml  test_episodes.json
src/tests/: __init__.py  test_engine_bfs.py  test_entity_relations.py  test_graph_functions.py  test_integration.py  test_integration_real_db.py  test_session_store.py  test_token_budget.py  test_traverse_knowledge_graph.py  test_traverse_wrapper.py
src/tools/: __init__.py  engine_bfs.py  entity_relations.py  format_flat.py  graph_functions.py  session_store.py  token_budget.py  traverse_knowledge_graph.py  traverse_wrapper.py
test-data/neo4j/data/: neo4j.dump  server_id
test-data/neo4j/data/databases/neo4j/: neostore  neostore.counts.db  neostore.indexstats.db  neostore.labeltokenstore.db.id  neostore.labeltokenstore.db.names.id  neostore.nodestore.db  neostore.nodestore.db.id  neostore.nodestore.db.labels.id  neostore.propertystore.db  neostore.propertystore.db.arrays  neostore.propertystore.db.arrays.id  neostore.propertystore.db.id  neostore.propertystore.db.index.id  neostore.propertystore.db.index.keys  neostore.propertystore.db.index.keys.id  neostore.propertystore.db.strings  neostore.propertystore.db.strings.id  neostore.relationshipgroupstore.degrees.db  neostore.relationshipstore.db  neostore.relationshipstore.db.id  neostore.relationshiptypestore.db.names  neostore.schemastore.db  neostore.schemastore.db.id
test-data/neo4j/data/dbms/: auth.ini
(+60 files in other folders)
